--- a/Page 1.html
+++ b/Page 1.html
@@ -209,11 +209,11 @@
                     <div class="close-btn"></div>
                     <li class="menu-item"><a href="Page 1.html">STORE</a></li>
                     <li class="menu-item">
-                        <a class="sub-btn" href="#">WOMEN </a>
+                        <a class="sub-btn" href="#">MODEL</a>
                         <ul class="sub-menu sub-menu-1">
                             <li class="sub-item"><a
-                                    href="https://www.facebook.com/profile.php?id=100025621762384">PHƯƠNG VY</a></li>
-                            <li class="sub-item"><a href="https://www.facebook.com/lebaotrang.tran">BẢO TRANG</a></li>
+                                    href="https://www.facebook.com/profile.php?id=100025621762384">QUỲNH CHI</a></li>
+                            <li class="sub-item"><a href="https://www.facebook.com/">QUỲNH ANH</a></li>
                             <li class="sub-item"><a href="https://www.facebook.com/profile.php?id=100041227353197">HỒNG
                                     THẮM</a></li>
                             <li class="sub-item"><a href="https://www.facebook.com/MZang097">MINH TRANG</a></li>
@@ -370,21 +370,21 @@
                     <div>
                         <p class="mid-tile canle">
                             Hello mọi người, vậy là cuối cùng dự án này đã được hoàn
-                            thành rồi 🤑
+                            thành rồi 
                         </p>
                         <p class="mid-tile canle">
-                            .Nói thật với mọi người chứ làm cái này cũng hơi nhọc công xíu;),
+                            .Nói thật làm cái này cũng hơi nhọc công xíu;),
                         </p>
                         <p class="mid-tile canle">
                             nhưng dù gì
                             thì cũng đã hoàn thành rồi.Đây là dự án projiect đầu
                         </p>
                         <p class="mid-tile canle">
-                            tiên mà em làm nên nếu
+                            tiên mà tôi làm nên nếu
                             có thể rất mong nhận được đánh giá góp ý
                         </p>
                         <p class="mid-tile canle">
-                            từ mọi người nhé:D
+                            từ mọi người:) (2020)
                         </p>
                     </div>
                 </div>
