--- a/MAIN.html
+++ b/MAIN.html
@@ -203,7 +203,7 @@
     </div>
     <div class="wrapper">
         <header>
-            <a href="MAIN.html" class="logo">ORIAS</a>
+            <a href="MAIN.html" class="logo">THAM</a>
             <div class="find">
                 <div class="dk"></div>
                 <div class="btn-find"></div>
@@ -244,11 +244,11 @@
                 </div>
                 <div class="box11">
                     <div class="box-img">
-                        <img src="avt4.jpg" alt="avt1">
+                        <img src="avt5.jpg" alt="avt1">
                     </div>
                     <div class="box-text">
                         <div class="he">
-                            Khánh Toàn
+                            Hồng Thắm
                         </div>
                         <p class="mi">#0001</p>
                     </div>
