--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <div class="wrapper">
         <!--section 1-->
         <header id="back">
-            <a href="MAIN.html" class="logo">ORIAS</a>
+            <a href="MAIN.html" class="logo">THAM</a>
             <div class="navigation">
                 <ul class="menu">
                     <div class="close-btn"></div>
@@ -290,7 +290,7 @@
                     </h1>
                     <div style="padding: 20px;"></div>
                     <p>
-                        Mua sắm những gì bạn muốn luôn đầy đủ tại ORIAS SHOP
+                        Mua sắm những gì bạn muốn luôn đầy đủ tại THAM SHOP
                     </p>
                     <div style="padding: 20px;"></div>
                     <div>
@@ -324,10 +324,10 @@
                         <div style="padding: 8px;"></div>
                         <div class="mid-tile">
                             <p class="mid-tile">
-                                Orias is the Internet's shop and toolkit, used by
+                                Tham is the Internet's shop and toolkit, used by
                             </p>
                             <p class="mid-tile">
-                                font-end, developers, and content creators- <span class="span">Toan</span>
+                                font-end, developers, and content creators- <span class="span">Tham</span>
                             </p>
                         </div>
                     </div>
@@ -352,40 +352,32 @@
                 <div class="bt2">
                     <p class="headtile3">
                         <span class="span">ADMIN</span> <span style="color: white;">IN</span> <span
-                            class="span">ORIAS</span>
+                            class="span">THAM</span>
                     </p>
 
                 </div>
             </div>
             <div class="listimg">
                 <div class="it1">
-                    <img src="avt4.jpg" />
-                    <p>K.Toàn</p>
+                    <img src="avt5.jpg" />
+                    <p>H.Thắm</p>
                 </div>
                 <div class="ht">
                     <div style="color: white;" class="headtile ln">
-                        Some things to say!!:D
+                        Some things to say!!
                     </div>
                     <div style="padding: 10px;"></div>
                     <div>
                         <p class="mid-tile canle">
-                            Hello mọi người, vậy là cuối cùng dự án này đã được hoàn
-                            thành rồi 
+                            Đây là dự án bài tập học kỳ I đến từ Hồng Thắm lớp 12A3 
                         </p>
                         <p class="mid-tile canle">
-                            .Nói thật làm cái này cũng hơi nhọc công xíu;),
+                            Thuộc THPT Chuyên Đại Học Vinh - A3K56
                         </p>
                         <p class="mid-tile canle">
-                            nhưng dù gì
-                            thì cũng đã hoàn thành rồi.Đây là dự án projiect đầu
+                            Đây là dự án projiect đầu tiên nên rất mong thầy nhận xét và góp ý 
                         </p>
-                        <p class="mid-tile canle">
-                            tiên mà tôi làm nên nếu
-                            có thể rất mong nhận được đánh giá góp ý
-                        </p>
-                        <p class="mid-tile canle">
-                            từ mọi người:) (2020)
-                        </p>
+                     
                     </div>
                 </div>
                 <img class="pts1" src="PTS.png" />
