--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop - Toàn</title>
+    <title>Shop - Thắm</title>
     <link rel="icon" type="image/x-icon" href="avt.png">
     <link rel="stylesheet" href="Page1-css.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -416,7 +416,7 @@
                         </p>
                         <p>
                             Awesome magic, available now to <span
-                                style="color:#E3F6FF;font-family: 'Comfortaa', cursive;">Orias</span>
+                                style="color:#E3F6FF;font-family: 'Comfortaa', cursive;">Tham</span>
                             subscribers.
                         </p>
                     </div>
@@ -533,7 +533,7 @@
                 <div>
                     <form class="form">
                         <label for="search">
-                            <input class="input" type="text" required="" placeholder="Search Orias" id="search">
+                            <input class="input" type="text" required="" placeholder="Search Tham" id="search">
                             <div class="fancy-bg"></div>
                             <div class="search">
                                 <svg viewBox="0 0 24 24" aria-hidden="true"
@@ -584,7 +584,7 @@
         <!-----------------------END---------------------->
         <footer>
             <div class="logo">
-                <a href="page2.html"><img class="anh1" src="2ngao.png"></a>
+                <a href="page2.html"><img class="anh1" src="avt5.jpg"></a>
                 <!-----------------------------CHANGE THEME-------------------------->
                 <div class="theme-switch">
                     <label class="switch">
