--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop - Thắm</title>
+    <title>Shop - Toàn</title>
     <link rel="icon" type="image/x-icon" href="avt.png">
     <link rel="stylesheet" href="Page1-css.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
@@ -203,7 +203,7 @@
     <div class="wrapper">
         <!--section 1-->
         <header id="back">
-            <a href="MAIN.html" class="logo">THAM</a>
+            <a href="MAIN.html" class="logo">ORIAS</a>
             <div class="navigation">
                 <ul class="menu">
                     <div class="close-btn"></div>
@@ -290,7 +290,7 @@
                     </h1>
                     <div style="padding: 20px;"></div>
                     <p>
-                        Mua sắm những gì bạn muốn luôn đầy đủ tại THAM SHOP
+                        Mua sắm những gì bạn muốn luôn đầy đủ tại ORIAS SHOP
                     </p>
                     <div style="padding: 20px;"></div>
                     <div>
@@ -324,10 +324,10 @@
                         <div style="padding: 8px;"></div>
                         <div class="mid-tile">
                             <p class="mid-tile">
-                                Tham is the Internet's shop and toolkit, used by
+                                Orias is the Internet's shop and toolkit, used by
                             </p>
                             <p class="mid-tile">
-                                font-end, developers, and content creators- <span class="span">Tham</span>
+                                font-end, developers, and content creators- <span class="span">Toan</span>
                             </p>
                         </div>
                     </div>
@@ -352,32 +352,40 @@
                 <div class="bt2">
                     <p class="headtile3">
                         <span class="span">ADMIN</span> <span style="color: white;">IN</span> <span
-                            class="span">THAM</span>
+                            class="span">ORIAS</span>
                     </p>
 
                 </div>
             </div>
             <div class="listimg">
                 <div class="it1">
-                    <img src="avt5.jpg" />
-                    <p>H.Thắm</p>
+                    <img src="avt4.jpg" />
+                    <p>K.Toàn</p>
                 </div>
                 <div class="ht">
                     <div style="color: white;" class="headtile ln">
-                        Some things to say!!
+                        Some things to say!!:D
                     </div>
                     <div style="padding: 10px;"></div>
                     <div>
                         <p class="mid-tile canle">
-                            Đây là dự án bài tập học kỳ I đến từ Hồng Thắm lớp 12A3 
+                            Hello mọi người, vậy là cuối cùng dự án này đã được hoàn
+                            thành rồi 
                         </p>
                         <p class="mid-tile canle">
-                            Thuộc THPT Chuyên Đại Học Vinh - A3K56
+                            .Nói thật làm cái này cũng hơi nhọc công xíu;),
                         </p>
                         <p class="mid-tile canle">
-                            Đây là dự án projiect đầu tiên nên rất mong thầy nhận xét và góp ý 
+                            nhưng dù gì
+                            thì cũng đã hoàn thành rồi.Đây là dự án projiect đầu
                         </p>
-                     
+                        <p class="mid-tile canle">
+                            tiên mà tôi làm nên nếu
+                            có thể rất mong nhận được đánh giá góp ý
+                        </p>
+                        <p class="mid-tile canle">
+                            từ mọi người:) (2020)
+                        </p>
                     </div>
                 </div>
                 <img class="pts1" src="PTS.png" />
@@ -416,7 +424,7 @@
                         </p>
                         <p>
                             Awesome magic, available now to <span
-                                style="color:#E3F6FF;font-family: 'Comfortaa', cursive;">Tham</span>
+                                style="color:#E3F6FF;font-family: 'Comfortaa', cursive;">Orias</span>
                             subscribers.
                         </p>
                     </div>
@@ -533,7 +541,7 @@
                 <div>
                     <form class="form">
                         <label for="search">
-                            <input class="input" type="text" required="" placeholder="Search Tham" id="search">
+                            <input class="input" type="text" required="" placeholder="Search Orias" id="search">
                             <div class="fancy-bg"></div>
                             <div class="search">
                                 <svg viewBox="0 0 24 24" aria-hidden="true"
@@ -584,7 +592,7 @@
         <!-----------------------END---------------------->
         <footer>
             <div class="logo">
-                <a href="page2.html"><img class="anh1" src="avt5.jpg"></a>
+                <a href="page2.html"><img class="anh1" src="2ngao.png"></a>
                 <!-----------------------------CHANGE THEME-------------------------->
                 <div class="theme-switch">
                     <label class="switch">
