--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                 </div>
                 <div class="ht">
                     <div style="color: white;" class="headtile ln">
-                        Some things to say!!:D
+                        Some things to say!!
                     </div>
                     <div style="padding: 10px;"></div>
                     <div>
@@ -373,7 +373,7 @@
                             thành rồi 
                         </p>
                         <p class="mid-tile canle">
-                            .Nói thật làm cái này cũng hơi nhọc công xíu;),
+                            Dự án này tôi vừa học vừa làm nên sẽ có vài lỗi
                         </p>
                         <p class="mid-tile canle">
                             nhưng dù gì
@@ -384,7 +384,7 @@
                             có thể rất mong nhận được đánh giá góp ý
                         </p>
                         <p class="mid-tile canle">
-                            từ mọi người:) (2020)
+                            từ mọi người:) <span style='font-family: "Style Script", serif;'>Toan Vo - 2020</span>
                         </p>
                     </div>
                 </div>
