--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                     <li class="menu-item">
                         <a class="sub-btn" href="#">MODEL</a>
                         <ul class="sub-menu sub-menu-1">
-                            <li class="sub-item"><a
-                                    href="https://www.facebook.com/profile.php?id=100025621762384">QUỲNH CHI</a></li>
+                            <li class="sub-item"><a href="https://www.facebook.com/profile.php?id=100025621762384">QUỲNH
+                                    CHI</a></li>
                             <li class="sub-item"><a href="https://www.facebook.com/">QUỲNH ANH</a></li>
                             <li class="sub-item"><a href="https://www.facebook.com/profile.php?id=100041227353197">HỒNG
                                     THẮM</a></li>
@@ -333,15 +333,21 @@
                     </div>
                     <div class="dk"></div>
                     <div class="list-box">
-                        <div class="itam">
-                            <i class="fa-brands fa-facebook"></i>
-                        </div>
-                        <div class="itam">
-                            <i class="fa-brands fa-twitter"></i>
-                        </div>
-                        <div class="itam">
-                            <i class="fa-brands fa-github"></i>
-                        </div>
+                        <a href="https://www.facebook.com/ToanKoChepCode">
+                            <div class="itam">
+                                <i class="fa-brands fa-facebook"></i>
+                            </div>
+                        </a>
+                        <a href="https://www.instagram.com/_toan.a3/">
+                            <div class="itam">
+                                <i class="fa-brands fa-twitter"></i>
+                            </div>
+                        </a>
+                        <a href="https://github.com/oriall">
+                            <div class="itam">
+                                <i class="fa-brands fa-github"></i>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -369,8 +375,8 @@
                     <div style="padding: 10px;"></div>
                     <div>
                         <p class="mid-tile canle">
-                            Hello mọi người, vậy là cuối cùng dự án này đã được hoàn
-                            thành rồi 
+                            Chào mọi người, vậy là cuối cùng dự án này đã được hoàn
+                            thành rồi
                         </p>
                         <p class="mid-tile canle">
                             Dự án này tôi vừa học vừa làm nên sẽ có vài lỗi
@@ -384,7 +390,7 @@
                             có thể rất mong nhận được đánh giá góp ý
                         </p>
                         <p class="mid-tile canle">
-                            từ mọi người:) <span style='font-family: "Style Script", serif;'>Toan Vo - 2020</span>
+                            từ mọi người:) <span style='font-family: "Style Script", serif; letter-spacing: 2px;'>Toan Vo - 2020</span>
                         </p>
                     </div>
                 </div>
@@ -640,12 +646,12 @@
                 <h1>Contact Us</h1>
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/TNF-107244734560839">
+                        <a href="https://www.facebook.com/ToanKoChepCode">
                             <i class="fab fa-facebook" style="font-size:20px;color:white"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/accounts/login/">
+                        <a href="https://www.instagram.com/_toan.a3/">
                             <i class="fab fa-instagram" style="font-size:25px;color:white"></i>
                         </a>
                     </li>
